# assembler

./: .gitignore  CMakeLists.txt  LICENSE
inc/: ass.h  elf_file.h  instructions.h  registers.h  utils.h
inc/arch/: archs.h
inc/arch/x64/: instructions.h  registers.h
inc/instructions/: add.h  and.h  call.h  cmp.h  dec.h  div.h  inc.h  jmp.h  mov.h  mul.h  neg.h  not.h  or.h  ret.h  sub.h  xor.h
inc/parser/: instruction.h  node.h  parser.h
inc/tokenizer/: token.h  tokenizer.h
inc/utils/: args.h  fs.h  print.h
scripts/: a.out  a.s
src/: elf_file.c  instructions.c  main.c  registers.c  utils.c
src/arch/: archs.c
src/arch/x64/: instructions.c  registers.c
src/instructions/: add.c  and.c  call.c  cmp.c  dec.c  div.c  inc.c  jmp.c  mov.c  mul.c  neg.c  not.c  or.c  ret.c  sub.c  xor.c
src/parser/: instruction.c  node.c  parser.c
src/tokenizer/: token.c  tokenizer.c
src/utils/: args.c  fs.c  print.c
